--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Page Not Found</title>
     <script>
-      window.location.href = 'giphy-clone/index.html';
+      if (!window.location.href.includes('/giphy-clone')) {
+        window.location.href = '/giphy-clone/index.html';
+      }
     </script>
   </head>
   <body>
